--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,73 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
+
+
+.quicksand-font {
+  font-family: "Quicksand", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+/* shared styles */
+.display-flex{
+  display: flex;
+
+
+
+/* navbar related styles */
+}
 .navbar{
-    display: flex;
+  justify-content: space-between;
+  max-width: 1440px;
+  margin: 0 auto;
+  align-items: center;
+  
+}
+.nav-item{
+  list-style: none;
+  justify-content: center;
+  margin-right: 30px;
+}
+.nav-link{
+  text-decoration: none;
+}
+.logo-name{
+  font-weight: bold;
+  font-size: 2rem;
+}
+.navbar img{
+  height: 62px;
+  width: 62px;
+}
+.column-1,.column-2,.btn-primary{
+  align-items: center;
+}
+.btn-primary{
+  font-size: 1.25rem;
+  font-weight: 600;
+  background-color: #FEA301;
+  color: white;
+  border: none;
+  padding: 10px 60px;
+  border-radius: 12px;
+}
+.item-1{
+  color: #FEA301;
+  font-size: 1.25rem;
+  font-weight: 600;
+}
+.item-2{
+  font-size: 1.25rem;
+  font-weight: 600;
+  color: skyblue;
+}
+.item-3{
+  font-size: 1.25rem;
+  font-weight: 600;
+  color: rgba(5, 212, 223, 1)
+
+}
+.item-4{
+  font-size: 1.25rem;
+  font-weight: 600;
+  color: rgba(93, 88, 239, 1);
 }
