--- a/styles/style.css
+++ b/styles/style.css
@@ -191,6 +191,30 @@ main{
   color: rgba(135, 0, 255, 1);
 
 }
+
+/* icons */
+.arrow-btn{
+  color: white;
+  background-color: #FEA301;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+  margin: 10px;
+  font-size: 2rem;
+  border: none;
+  padding: 10px;
+}
+.arrow{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+
+
+
 @media screen and (max-width:576px){
   
   .logo-name,.column-2,.btn-primary{
@@ -232,6 +256,23 @@ main{
    align-items: center;
    margin: 0 80px;
    
+  }
+  .card-box{
+    flex-direction: column;
+  }
+  .card1,.card2,.card3{
+    width: 100%;
+    margin: 0px 0px 20px 0px;
+    padding: 0px;
+   
+    
+  }
+  .section-title{
+    font-size: 1.625rem;
+    margin: 20px 20px 0px 20px;
+  }
+  .arrow,.arrow-btn{
+    visibility: hidden;
   }
   
 
