--- a/styles/style.css
+++ b/styles/style.css
@@ -15,7 +15,11 @@
   .light-gray{
     color: rgba(128, 128, 128, 1);
   }
-
+  
+  /* dark4 */
+  .dark-gray{
+    color: rgba(102, 102, 102, 1);
+  }
   
 
 
@@ -227,6 +231,87 @@ main{
 }
 .story-section{
   background-image: linear-gradient(0deg,rgba(255, 218, 152, 1),rgba(255, 255, 255, 0),rgba(255, 255, 255, 1));
+}
+
+.story1-title{
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+.story-description{
+  font-weight: 600;
+  font-size: 0.96rem;
+  text-align: left;
+  width: 430px;
+}
+.story-btn1{
+  background-color: skyblue;
+  border: none;
+  width: 200px;
+  height: 70px;
+  border-radius: 25%;
+  padding: 10px 20px;
+}
+.story1,
+.story2,
+.story3,
+.story4,
+.story5{
+  background-color: white;
+  box-shadow: 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);
+  border-radius: 16px;
+  
+
+
+}
+.story1{
+  width: 540px;
+}
+.story2,
+.story3,
+.story4,
+.story5{
+  width: 290px;
+}
+.story-container{
+  max-width: 1160px;
+  display: grid;
+ grid-template-areas:
+ "story1 story1 story2 story3"
+  "story1 story1 story4 story5";
+ gap: 20px;
+ margin: 10px auto;
+
+  
+}
+.story1{
+   grid-area: story1;
+}
+.story2{
+  grid-area:story2 ;
+}
+.story3{
+  grid-area: story3;
+}
+.story4{
+  grid-area: story4;
+}
+.story5{
+  grid-area: story5;
+}
+.story-content{
+  padding: 20px;
+}
+.rounded-image{
+  border-top-left-radius: 16px;
+  border-top-right-radius: 16px;
+}
+.story-btn1{
+  font-size: 16px;
+  border-radius: 4em;
+  padding: 0.5em 1em;
+  border: none;
+  outline: none;
+  background-color: skyblue;
 }
 
 
