added footer section

--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,7 @@
   font-style: normal;
 }
 
+
 /* shared styles */
 .display-flex {
   display: flex;
@@ -439,7 +440,63 @@ main {
   align-items: center;
 }
 
+/* footer related styles */
+footer{
+  background-color: rgba(1, 172, 253, 1);
+}
+footer .logo{
+  filter:brightness(white);
+}
+.logo{
+  width: 80px;
+  height: 80px;
+}
+.logo-title{
+  align-items: center;
+  gap: 10px;
+}
 
+.footer-description{
+  width: 400px;
+  color: white;
+}
+.footer-title{
+  font-weight: bold;
+  font-size: 2.62rem;
+  color: white;
+}
+.about-school ul li{
+  list-style: none;
+  font-size: 1.25rem;
+  margin-bottom: 10px;
+  margin-left: -30px;
+
+}
+.about-school {
+  color: white;
+ 
+}
+.school{
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+.keep img{
+  gap:10px;
+}
+.keep {
+  color: white;
+  font-weight: bold;
+  font-size: 1.62rem;
+}
+
+.footer-container{
+  
+  display: flex;
+  justify-content:space-evenly ;
+  
+  align-items: center;
+  /* margin: 0px 200px; */
+}
 
 
 
@@ -606,6 +663,26 @@ main {
       font-size: 1.24rem;
       margin: 50px 0px;
     
+    }
+    .footer-container{
+      flex-direction: column;
+      
+    }
+
+    .logo-title{
+      width: 50%;
+    }
+    .footer-description{
+      width: 100%;
+      margin-bottom: 20px;
+      margin-left: 10px;
+    }
+    .about-school{
+      margin-left: -150px;
+      margin-bottom: 20px;
+    }
+    .keep{
+      margin-left: -110px;
     }
     
     
